--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-pdf version of CV: <a href="20210211_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2021/02/11)</a>
+pdf version of CV: <a href="20210910_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2021/09/10)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -139,6 +139,59 @@ Articles related to my works:
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=10035&sid=5161bc5f73a28975817be2598ff36c06&module_srl=5863">KAIST Department of Physics Newsletter Fall 2018, Vol. 07 (in Korean)</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=8883&sid=76fbd0b673404c756b4a634cbf4bb98a&module_srl=5863">KAIST Department of Physics Newsletter Autumn 2017, Vol. 05 (in Korean)</a><br><br>
 <!--Blog: <a href="/blog/">here</a>--!>
+<!-- Publication --><br>
+	<div>
+	<div class="cvitemize"> Publication </div>
+		<ul><li><div>
+		<span class="cvitem"> "Fractonic Quantum Phases in Breathing Pyrochlore Lattice" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:black">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>
+		</li><li><div>
+		<span class="cvitem"> "Non-Landau Fermi Liquid induced by Bose Metal" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2102.05052">arXiv:2102.05052</a>
+		</li><li><div>
+		<span class="cvitem"> "Lattice vibration as a knob for novel quantum criticality: Emergence of supersymmetry from spin-lattice coupling" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="http://www.junhyunlee.org" style="text-decoration:none;color:black">Junhyun Lee<a/>, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a><br>
+			<a href="https://doi.org/10.1103/PhysRevB.103.014435">Phys. Rev. B <b>103</b>, 014435</a> (<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>)
+		</li><li><div>
+		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a>, and <a href="https://physics.snu.ac.kr/hmin/" style="text-decoration:none;color:black">Hongki Min</a><br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)</div>
+<!--		<span id="quicksummary4" style="CURSOR: hand" onclick="if(expla4.style.display=='none') {expla4.style.display='';quicksummary4.innerText='close quick summary'} else {expla4.style.display='none';quicksummary4.innerText='open quick summary'}">open quick summary</span><div id="expla4" style="display: none;"><hr>We find that a novel class of quantum criticality appears at topological phase transition point characterized by emergent anisotropic non-Fermi liquid behaviors which in critical electronic modes and long-range Coulomb interactions are strongly coupled, and the system becomes finitely anisotropic.<hr></div>-->
+		</li><li><div>
+		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:black">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a> <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)</div>
+<!--		<span id="quicksummary3" style="CURSOR: hand" onclick="if(expla3.style.display=='none') {expla3.style.display='';quicksummary3.innerText='close quick summary'} else {expla3.style.display='none';quicksummary3.innerText='open quick summary'}">open quick summary</span><div id="expla3" style="display: none;"><hr>We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<hr></div>-->
+		</li><li><div>
+		<span class="cvitem"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon<a><br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+<!--		<span id="quicksummary2" style="CURSOR: hand" onclick="if(expla2.style.display=='none') {expla2.style.display='';quicksummary2.innerText='close quick summary'} else {expla2.style.display='none';quicksummary2.innerText='open quick summary'}">open quick summary</span><div id="expla2" style="display: none;"><hr>Chiral symmetry is one of the most fundamental symmetries in nature, which prohibits mass generation of fermions. Remarkable advances in topological matter reveal the chiral symmetry may be realized as lattice symmetries of topological state. A topological phase transition is intrinsically tied to breaking a chiral symmetry. The topological transition, however, is lack of the Lorentz symmetry in contrast to particle physics. In particular, the Coulomb interaction is instantaneous, and it is imperative to understand its effects on chiral symmetry breaking transitions. Thus, we investigate long-range Coulomb interaction effects on topological phase transitions and find striking properties with novel scaling functions.<hr></div>-->
+		</li><li><div>
+		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:black">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a><br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
+<!--		<span id="quicksummary1" style="CURSOR: hand" onclick="if(expla1.style.display=='none') {expla1.style.display='';quicksummary1.innerText='close quick summary'} else {expla1.style.display='none';quicksummary1.innerText='open quick summary'}">open quick summary</span><div id="expla1" style="display: none;"><hr>We study the topological phase transition accompanied by the change in the topological nodal structure. The nodal fermionic excitation induces a novel universality class which is characterized by the hyperscaling violation, emergent relativistic scale, and large anomalous dimensions. We propose that the unusual linear phase boundary as a signal of the underlying line-nodal fermions.<hr></div>-->
+		</li><li><div>
+			
+		<span class="cvitem"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, <b><u>SangEun Han</u></b>, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">JHEP <b>02</b>, 142 (2015)</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
+		</li></ul>
+	</div>
 <!-- Academic Affiliations 
 -->
 	<div>
@@ -256,65 +309,12 @@ Articles related to my works:
 		<div class="cvitemcontent"> at Republic of Korea Army, the 30th Division, Republic of Korea</div>
 		</li></ul>		
 	</div>
-<!-- Publication --><br>
-	<div>
-	<div class="cvitemize"> Publication </div>
-		<ul><li><div>
-		<span class="cvitem"> "Fractonic Quantum Phases in Breathing Pyrochlore Lattice" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:black">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>
-		</li><li><div>
-		<span class="cvitem"> "Non-Landau Fermi Liquid induced by Bose Metal" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2102.05052">arXiv:2102.05052</a>
-		</li><li><div>
-		<span class="cvitem"> "Lattice vibration as a knob for novel quantum criticality: Emergence of supersymmetry from spin-lattice coupling" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="http://www.junhyunlee.org" style="text-decoration:none;color:black">Junhyun Lee<a/>, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a><br>
-			<a href="https://doi.org/10.1103/PhysRevB.103.014435">Phys. Rev. B <b>103</b>, 014435</a> (<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>)
-		</li><li><div>
-		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a>, and <a href="https://physics.snu.ac.kr/hmin/" style="text-decoration:none;color:black">Hongki Min</a><br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)</div>
-<!--		<span id="quicksummary4" style="CURSOR: hand" onclick="if(expla4.style.display=='none') {expla4.style.display='';quicksummary4.innerText='close quick summary'} else {expla4.style.display='none';quicksummary4.innerText='open quick summary'}">open quick summary</span><div id="expla4" style="display: none;"><hr>We find that a novel class of quantum criticality appears at topological phase transition point characterized by emergent anisotropic non-Fermi liquid behaviors which in critical electronic modes and long-range Coulomb interactions are strongly coupled, and the system becomes finitely anisotropic.<hr></div>-->
-		</li><li><div>
-		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:black">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a> <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)</div>
-<!--		<span id="quicksummary3" style="CURSOR: hand" onclick="if(expla3.style.display=='none') {expla3.style.display='';quicksummary3.innerText='close quick summary'} else {expla3.style.display='none';quicksummary3.innerText='open quick summary'}">open quick summary</span><div id="expla3" style="display: none;"><hr>We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<hr></div>-->
-		</li><li><div>
-		<span class="cvitem"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon<a><br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
-<!--		<span id="quicksummary2" style="CURSOR: hand" onclick="if(expla2.style.display=='none') {expla2.style.display='';quicksummary2.innerText='close quick summary'} else {expla2.style.display='none';quicksummary2.innerText='open quick summary'}">open quick summary</span><div id="expla2" style="display: none;"><hr>Chiral symmetry is one of the most fundamental symmetries in nature, which prohibits mass generation of fermions. Remarkable advances in topological matter reveal the chiral symmetry may be realized as lattice symmetries of topological state. A topological phase transition is intrinsically tied to breaking a chiral symmetry. The topological transition, however, is lack of the Lorentz symmetry in contrast to particle physics. In particular, the Coulomb interaction is instantaneous, and it is imperative to understand its effects on chiral symmetry breaking transitions. Thus, we investigate long-range Coulomb interaction effects on topological phase transitions and find striking properties with novel scaling functions.<hr></div>-->
-		</li><li><div>
-		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:black">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a><br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
-<!--		<span id="quicksummary1" style="CURSOR: hand" onclick="if(expla1.style.display=='none') {expla1.style.display='';quicksummary1.innerText='close quick summary'} else {expla1.style.display='none';quicksummary1.innerText='open quick summary'}">open quick summary</span><div id="expla1" style="display: none;"><hr>We study the topological phase transition accompanied by the change in the topological nodal structure. The nodal fermionic excitation induces a novel universality class which is characterized by the hyperscaling violation, emergent relativistic scale, and large anomalous dimensions. We propose that the unusual linear phase boundary as a signal of the underlying line-nodal fermions.<hr></div>-->
-		</li><li><div>
-			
-		<span class="cvitem"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, <b><u>SangEun Han</u></b>, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">JHEP <b>02</b>, 142 (2015)</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
-		</li></ul>
-	</div>
 <!-- Interests --><br>
 	<div>
 	<div class="cvitemize"> Research Interests </div>
 		<ul>
 		<li><div class="cvitemcontent"> 
-Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quantum phase transitions, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, Non-Fermi liquids, Non-Hermitian systems, Flat bands, Deconfined Quantum Critical Points, etc.</div></li></ul>
+Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quantum phase transitions, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, Non-Fermi liquids, Non-Hermitian systems, Flat bands, Deconfined Quantum Critical Points, Fractons, etc.</div></li></ul>
 	</div>
 <!-- Teaching Experiences --><br>
 	<div>
