--- a/arxiv/2021_09_arxiv.html
+++ b/arxiv/2021_09_arxiv.html
@@ -169,7 +169,46 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.03825">https://arxiv.org/abs/2109.03825</a></span> Chaos-protected locality ***** (Shao-Kai Jian, Brian Swingle)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.03835">https://arxiv.org/abs/2109.03835</a></span> Fractonic Quantum Phases in Breathing Pyrochlore Lattice ***** (SangEun Han, Adarsh S. Patri, Yong Baek Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.03851">https://arxiv.org/abs/2109.03851</a></span> Triplet resonating valence bond theory and transition metal chalcogenides (Elio J. Ko ̈nig, Piers Coleman)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.04259">https://arxiv.org/abs/2109.04259</a></span> Arboreal Topological and Fracton Phases ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.04259">https://arxiv.org/abs/2109.04259</a></span> Arboreal Topological and Fracton Phases ****</p><br>
+<p class="p1">20210913</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.04669">https://arxiv.org/abs/2109.04669</a></span> Kohn-Luttinger Superconductivity and Inter-Valley Coherence in Rhombohedral Trilayer Graphene ***** (Yi-Zhuang You, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.04723">https://arxiv.org/abs/2109.04723</a></span> Dynamical Mean-Field Theory of Disordered Electrons: Coherent Potential Approximation and Beyond</p>
+<p class="p2"><a href="https://arxiv.org/abs/2109.03826">https://arxiv.org/abs/2109.03826</a><span class="s2"> Subleading Bounds on Chaos</span></p>
+<p class="p3"><br></p>
+<p class="p1">20210914</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05037">https://arxiv.org/abs/2109.05037</a></span> Sachdev-Ye-Kitaev Models and Beyond: A Window into Non-Fermi Liquids ***** (Debanjan Chowdhury, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05403">https://arxiv.org/abs/2109.05403</a></span> Evolution with Magnetic Field of Discrete Scale Invariant Supercritical States in Graphene (X. C. Xie)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06091">https://arxiv.org/abs/2109.06091</a></span> Time crystals: From Schro ̈dinger to Sisyphus</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06145">https://arxiv.org/abs/2109.06145</a></span> Anyon Condensation: Coherent states, Symmetry Enriched Topological Phases, Goldstone Theorem, and Dynamical Rearrangement of Symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06059">https://arxiv.org/abs/2109.06059</a></span> Quantum Criticality of Anti-ferromagnetism and Superconductivity with Relativity *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05525">https://arxiv.org/abs/2109.05525</a></span> Inhomogeneities in the 2-flavor Chiral Gross-Neveu Model ***** (Andreas Wipf)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2109.05512">https://arxiv.org/abs/2109.05512</a><span class="s2"> AdS from CFT for scalar QED **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05993">https://arxiv.org/abs/2109.05993</a></span> A Weyl-Z2 semimetal from holography **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06039">https://arxiv.org/abs/2109.06039</a></span> Theory of orbital do-vector in a two-band spin-singlet superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05588">https://arxiv.org/abs/2109.05588</a></span> Vanishing short multiplets in rank one 4d/5d SCFTs **** (Jaewon Song)</p>
+<p class="p3"><br></p>
+<p class="p1">20210915</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06871">https://arxiv.org/abs/2109.06871</a></span> Symmetry indicators vs. bulk winding numbers of topologically non-trivial bands **** (Pallab Goswami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06597">https://arxiv.org/abs/2109.06597</a></span> Lessons from O(N) models in one dimension</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06594">https://arxiv.org/abs/2109.06594</a></span> Infinite critical boson non-Fermi liquid on heterostructure interfaces ***** (Gang Chen)</p>
+<p class="p3"><br></p>
+<p class="p1">20210916</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07010">https://arxiv.org/abs/2109.07010</a></span> Exact eigenstates of extended SU(N) Hubbard models: generalizations of η-paring states with N-particle off-diagonal long-range order (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06959">https://arxiv.org/abs/2109.06959</a></span> Boundary-diagnosing topological invariants beyond symmetry indicators: A case study of two-fold rotational symmetric superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06890">https://arxiv.org/abs/2109.06890</a></span> Dynamical Axions in U(1) Quantum Spin Liquids ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07330">https://arxiv.org/abs/2109.07330</a></span> Covariant canonical formulations of classical field theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07462">https://arxiv.org/abs/2109.07462</a></span> Celestial Feynman Rules for Scalars</p>
+<p class="p3"><br></p>
+<p class="p1">20210917</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07485">https://arxiv.org/abs/2109.07485</a></span> Reply to Comment on “Discrete Time Crystals: Rigidity Criticality and Realizations” (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07520">https://arxiv.org/abs/2109.07520</a></span> Preformed Cooper Pairs in Flat Band Semimetals ***</p>
+<p class="p2"><a href="https://arxiv.org/abs/2109.08092">https://arxiv.org/abs/2109.08092</a><span class="s2"> Van der Waals Anomaly ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06887">https://arxiv.org/abs/2109.06887</a></span> Fracton Topological Order at Finite Temperature ***** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07491">https://arxiv.org/abs/2109.07491</a></span> Exact emergent quantum state designs from quantum chaotic dynamics ***** (Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08104">https://arxiv.org/abs/2109.08104</a></span> Two quadrupolar orders in Osmium double-perovskites (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08093">https://arxiv.org/abs/2109.08093</a></span> Fractionalization on the surface: Is type-II terminated 1T-TaS2 surface an anomalously realized spin liquid? (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07552">https://arxiv.org/abs/2109.07552</a></span> Simulating quantum gravity with optical lattices **** (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08142">https://arxiv.org/abs/2109.08142</a></span> Doping a moiré Mott Insulator: A t-J model study of twisted cuprates **** (Xue-Yang Song, Ya-Hui Zhang, Ashvin Vishwanath)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
