--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ TA class materials: <a href="taclass.html">here</a>
 <a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ">Publications on Google Scholar</a><br>
 <a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1">Publications on arXiv</a><br>
 <a href="http://inspirehep.net/search?p=exactauthor:S.Han.7&sf=earliestdate">Publications on INSPIRE</a><br>
-<a href="https://orcid.org/0000-0003-3141-1964">Publications on ORCID</a>
+<a href="https://orcid.org/0000-0003-3141-1964">Publications on <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.1em;" alt="ORCID iD icon">ORCID</a>
 <br><br>
 Articles related to my works:
 <br>
