--- a/arxiv/2021_09_arxiv.html
+++ b/arxiv/2021_09_arxiv.html
@@ -208,7 +208,48 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08104">https://arxiv.org/abs/2109.08104</a></span> Two quadrupolar orders in Osmium double-perovskites (Hae-Young Kee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08093">https://arxiv.org/abs/2109.08093</a></span> Fractionalization on the surface: Is type-II terminated 1T-TaS2 surface an anomalously realized spin liquid? (Gang Chen)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07552">https://arxiv.org/abs/2109.07552</a></span> Simulating quantum gravity with optical lattices **** (Jiannis K. Pachos)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08142">https://arxiv.org/abs/2109.08142</a></span> Doping a moiré Mott Insulator: A t-J model study of twisted cuprates **** (Xue-Yang Song, Ya-Hui Zhang, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08142">https://arxiv.org/abs/2109.08142</a></span> Doping a moiré Mott Insulator: A t-J model study of twisted cuprates **** (Xue-Yang Song, Ya-Hui Zhang, Ashvin Vishwanath)</p><br>
+<p class="p1">20210920</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08274">https://arxiv.org/abs/2109.08274</a></span> Comments on the Atiyah-Patodi-Singer index theorem, domain wall, and Berry phase ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08595">https://arxiv.org/abs/2109.08595</a></span> Chapter 1 Exploring Quantum Hall Physics at Ultra-Low Temperatures and at High Pressures ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08155">https://arxiv.org/abs/2109.08155</a></span> Anomalous Transport Induced by Non-Hermitian Anomalous Berry Connection in Non-Hermitian Systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08158">https://arxiv.org/abs/2109.08158</a></span> Quantum Lego: Building Quantum Error Correction Codes from Tensor Networks</p>
+<p class="p2"><br></p>
+<p class="p1">20210921</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.09328">https://arxiv.org/abs/2109.09328</a></span> Hyperbolic Metamaterials and Massive Klein-Gordon Equation in 2+1 Dimensional de Sitter Spacetime</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.09529">https://arxiv.org/abs/2109.09529</a></span> Topological piezoelectric response in moir ́e graphene systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.08816">https://arxiv.org/abs/2109.08816</a></span> Analytic exposition of the graviton modes in fractional quantum Hall effects and its physical implications ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210922</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.09895">https://arxiv.org/abs/2109.09895</a></span> Ultrafast excitation and topological soliton formation in incommensurate charge density wave states (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.09749">https://arxiv.org/abs/2109.09749</a></span> Global phase diagram of twisted bilayer graphene above Tc ** (Steven H. Simon, S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10051">https://arxiv.org/abs/2109.10051</a></span> Sigma-model analysis of SU(3) antiferromagnetic spins on the triangular lattice **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10320">https://arxiv.org/abs/2109.10320</a></span> Operatorial formulation of the ghost rotationally-invariant slave-Boson theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10121">https://arxiv.org/abs/2109.10121</a></span> Holography of Strongly Coupled Gauge Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.09721">https://arxiv.org/abs/2109.09721</a></span> Machine-learning hidden symmetries</p>
+<p class="p2"><br></p>
+<p class="p1">20210923</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10568">https://arxiv.org/abs/2109.10568</a></span> Exact Quench Dynamics from Algebraic Geometry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10706">https://arxiv.org/abs/2109.10706</a></span> Relationship between the electronic polarization and the generalized winding number in non-Hermitian systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10901">https://arxiv.org/abs/2109.10901</a></span> Bulk and edge dynamics of a 2D Affleck-Kennedy-Lieb-Tasaki model **</p>
+<p class="p2"><br></p>
+<p class="p1">20210924</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10909">https://arxiv.org/abs/2109.10909</a></span> Quantum Criticality Using a Superconducting Quantum Processor ** (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10923">https://arxiv.org/abs/2109.10923</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories (II): Furstenberg’s Theorem and Exceptions to Heating Phases ***** (Xueda Wen, Yingfei Gu, Ashvin Vishwanath, Ruihua Fan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11539">https://arxiv.org/abs/2109.11539</a></span> Ungappable edge theories with finite dimensional Hilbert spaces ** (Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11445">https://arxiv.org/abs/2109.11445</a></span> Critical temperatures of a model cuprate</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11441">https://arxiv.org/abs/2109.11441</a></span> Correlated insulators, density wave states, and their nonlinear optical response in magic-angle twisted bilayer graphene ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11324">https://arxiv.org/abs/2109.11324</a></span> Tensor network simulation of the (1+1)-dimensional <i>O</i>(3) nonlinear σ-model with θ = π term ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10911">https://arxiv.org/abs/2109.10911</a></span> Characterization and Classification of Fermionic Symmetry Enriched Topological Phases ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10913">https://arxiv.org/abs/2109.10913</a></span> Fermionic symmetry fractionalization in (2+1)D ***** (Daniel Bulmash, Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10922">https://arxiv.org/abs/2109.10922</a></span> Anomaly cascade in (2+1)D fermionic topological phases ***** (Daniel Bulmash, Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11039">https://arxiv.org/abs/2109.11039</a></span> Classification of (2+1)D invertible fermionic topological phases with symmetry ***** (Maissam Barkeshli, Yu-An Chen, Po-Shen Hsin, Naren Manjunath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11522">https://arxiv.org/abs/2109.11522</a></span> Fractional Quantum Hall States on CP2 Space ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.10916">https://arxiv.org/abs/2109.10916</a></span> Roller-Coaster in a Flatland: Magnetoresistivity in Eu-intercalated Graphite **<span class="Apple-converted-space">  </span>(A. L. Chernyshev, O. A. Starykh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11122">https://arxiv.org/abs/2109.11122</a></span> The free energy of twisting spins in Mn3Sn ** (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11152">https://arxiv.org/abs/2109.11152</a></span> Phase diagram of the Hubbard model on a honeycomb lattice: A cluster slave-spin study</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11147">https://arxiv.org/abs/2109.11147</a></span> Understanding the index theorems with massive fermions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.03268">https://arxiv.org/abs/2109.03268</a></span> Energy Transport in Sachdev-Ye-Kitaev Networks Coupled to Thermal Baths (Brian Swingl)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
