--- a/arxiv/2021_09_arxiv.html
+++ b/arxiv/2021_09_arxiv.html
@@ -249,7 +249,32 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11122">https://arxiv.org/abs/2109.11122</a></span> The free energy of twisting spins in Mn3Sn ** (Leon Balents)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11152">https://arxiv.org/abs/2109.11152</a></span> Phase diagram of the Hubbard model on a honeycomb lattice: A cluster slave-spin study</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11147">https://arxiv.org/abs/2109.11147</a></span> Understanding the index theorems with massive fermions ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.03268">https://arxiv.org/abs/2109.03268</a></span> Energy Transport in Sachdev-Ye-Kitaev Networks Coupled to Thermal Baths (Brian Swingl)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.03268">https://arxiv.org/abs/2109.03268</a></span> Energy Transport in Sachdev-Ye-Kitaev Networks Coupled to Thermal Baths (Brian Swingl)</p><br>
+<p class="p1">20210927</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11688">https://arxiv.org/abs/2109.11688</a></span> Entropy scaling law and the quantum marginal problem: simplification and generalization (Isaac H. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11687">https://arxiv.org/abs/2109.11687</a></span> An effective field theory approach for the S = 3/2 bilayer honeycomb antiferromagnet **</p>
+<p class="p2"><a href="https://arxiv.org/abs/2109.11824">https://arxiv.org/abs/2109.11824</a><span class="s2"> Qubit alive thanks to the anomaly</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11914">https://arxiv.org/abs/2109.11914</a></span> A review of some new perspectives on the theory of superconducting Sr2RuO4</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.12087">https://arxiv.org/abs/2109.12087</a></span> Notes on symmetries in particle physics **</p>
+<p class="p3"><br></p>
+<p class="p1">20210928</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.12117">https://arxiv.org/abs/2109.12117</a></span> Large extrinsic phonon thermal Hall effect from resonant scattering *** (Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13224">https://arxiv.org/abs/2109.13224</a></span> Unconventional Superconductivity from Fermi Surface Fluctuations in Strongly Correlated Metals (J. H. Pixley, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.12684">https://arxiv.org/abs/2109.12684</a></span> Electronic phase separation: recent progress in the old problem</p>
+<p class="p3"><br></p>
+<p class="p1">20210929</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13263">https://arxiv.org/abs/2109.13263</a></span> The Chiral Sachdev-Ye Model: Integrability and Chaos of Anyons in 1+1d</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13411">https://arxiv.org/abs/2109.13411</a></span> A New Construction of Abelian Lattice Chern-Simons Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13317">https://arxiv.org/abs/2109.13317</a></span> The SpinParser software for pseudofermion functional renormalization group calculations on quantum magnets (Finn Lasse Buessen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13267">https://arxiv.org/abs/2109.13267</a></span> Weak symmetry breaking and topological order in a 3D compressible quantum liquid *** (Meng Cheng)</p>
+<p class="p3"><br></p>
+<p class="p1">20210930</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13947">https://arxiv.org/abs/2109.13947</a></span> Multi-gap topology of the Wilson loop operator in mirror symmetric insulators ** (Penghao Zhu, Taylor L. Hughes, Xiao-Qi Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.14308">https://arxiv.org/abs/2109.14308</a></span> Graphene bilayer Moir ́e lattice with Rashba spin-orbit coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.14149">https://arxiv.org/abs/2109.14149</a></span> Metal-insulator transition in (2+1)-dimensional Hubbard model with tensor renormalization group **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.14222">https://arxiv.org/abs/2109.14222</a></span> Phase shift, ellipticity, angle, and topological number in skyrmion lattices (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.14280">https://arxiv.org/abs/2109.14280</a></span> Introduction to classical and quantum integrability ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.14278">https://arxiv.org/abs/2109.14278</a></span> 4-dimensional Chern-Simons theory and integrable field theories</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
